--- a/jgstore-backend/package.json
+++ b/jgstore-backend/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.5"
+    "mysql2": "^3.15.1",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
